objects/EinsteinGPT_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Case_Summary2__c</fullName>
        <label>Case Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engagement Interaction</label>
        <referenceTo>EngagementInteraction</referenceTo>
        <relationshipName>EinsteinGPT_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Einstein Summary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Einstein Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Einstein Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>